# GL-Project

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: debug-fragment.txt  debug-vertex.txt
include/app/: window.h
include/core/: buffer.h  vertex.h
include/io/: file-io.h
include/shaders/: shader.h
include/util/: AssetManager.h  gl.h  glm.h  log.h
src/: main.cpp
src/io/: CMakeLists.txt  file-io.cpp
